second attempt to fix font on mobile

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -2,6 +2,7 @@
   background-color: #556b2f;}
 
 body {
-  font-family: "Comic Sans MS", "Comic Sans";
-  background-color: #a9c39e;}
+  font-family: "Comic Sans MS", "Comic Sans", sans-serif;
+  background-color: #a9c39e;
+}
  
